MobileExpense/force-app/main/default/objects/hubspot_integration__c/hubspot_integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>stores hubspot integration related data</description>
    <label>Hubspot Integration</label>
</CustomObject>