MobileExpense/force-app/main/default/objects/hubspot_integration__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Stores access token for hubspot integration</description>
    <label>Access Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>