MobileExpense/force-app/main/default/objects/hubspot_integration__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <description>Stores hubspot API endpoint.</description>
    <label>API Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>