MobileExpense/force-app/main/default/objects/hubspot_integration__c/fields/Existing_Companies_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Existing_Companies_Retrieved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to retrieve all existing companies or only for that scheduled day</description>
    <label>Existing Companies Retrieved</label>
    <type>Checkbox</type>
</CustomField>