MobileExpense/force-app/main/default/objects/hubspot_integration__c/fields/Hubspot_Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Org_URL__c</fullName>
    <label>Hubspot Org URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>